--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.7.7",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
   }
